// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should corrently render ExpenseSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`should corrently render ExpenseSummary with mulitple expense 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totaling 
    $2.35
  </h1>
</div>
`;
